# src/main/java/io/swagger/api/ClienteApiController.java
@@ -1,115 +1,174 @@
 package io.swagger.api;
 
-import io.swagger.model.Cliente;
-import com.fasterxml.jackson.databind.ObjectMapper;
-import io.swagger.annotations.*;
+import java.net.URI;
+import java.util.List;
+
+import javax.servlet.http.HttpServletRequest;
+import javax.validation.Valid;
+
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Controller;
+import org.springframework.util.LinkedMultiValueMap;
+import org.springframework.util.MultiValueMap;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestHeader;
-import org.springframework.web.bind.annotation.RequestParam;
-import org.springframework.web.bind.annotation.RequestPart;
-import org.springframework.web.multipart.MultipartFile;
+import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
 
-import javax.validation.constraints.*;
-import javax.validation.Valid;
-import javax.servlet.http.HttpServletRequest;
-import java.io.IOException;
-import java.util.List;
+import com.fasterxml.jackson.databind.ObjectMapper;
+
+import io.swagger.annotations.ApiParam;
+import io.swagger.api.dao.ClienteDAO;
+import io.swagger.model.Cliente;
+import io.swagger.model.Clientes;
+
 @javax.annotation.Generated(value = "io.swagger.codegen.languages.SpringCodegen", date = "2021-04-07T05:48:22.248Z")
 
 @Controller
 public class ClienteApiController implements ClienteApi {
 
-    private static final Logger log = LoggerFactory.getLogger(ClienteApiController.class);
+	private static final Logger log = LoggerFactory.getLogger(ClienteApiController.class);
 
-    private final ObjectMapper objectMapper;
+	private final ObjectMapper objectMapper;
+	private final HttpServletRequest request;
+	private ClienteDAO clienteDAO;
 
-    private final HttpServletRequest request;
+	@org.springframework.beans.factory.annotation.Autowired
+	public ClienteApiController(ObjectMapper objectMapper, HttpServletRequest request) {
+		this.objectMapper = objectMapper;
+		this.request = request;
+		this.clienteDAO = new ClienteDAO();
+	}
 
-    @org.springframework.beans.factory.annotation.Autowired
-    public ClienteApiController(ObjectMapper objectMapper, HttpServletRequest request) {
-        this.objectMapper = objectMapper;
-        this.request = request;
-    }
+	public ResponseEntity<Cliente> alteraStatusPorId(@ApiParam(value = "Status do cliente.", required = true, allowableValues = "\"ativo\", \"inativo\"") @PathVariable("status") String status, @ApiParam(value = "Id do cliente.", required = true) @PathVariable("id") Integer id) {
+		ResponseEntity<Cliente> responseEntity = null;
+		try {
+			Cliente clienteUpdateStatus = clienteDAO.alteraStatusPorId(id, status);
 
-    public ResponseEntity<Cliente> alteraStatusPorId(@ApiParam(value = "Status do cliente.",required=true, allowableValues = "\"ativo\", \"inativo\"") @PathVariable("status") String status,@ApiParam(value = "Id do cliente.",required=true) @PathVariable("id") Integer id) {
-        String accept = request.getHeader("Accept");
-        if (accept != null && accept.contains("application/json")) {
-            try {
-                return new ResponseEntity<Cliente>(objectMapper.readValue("{  \"tipo\" : \"interno\",  \"dataAtualizacao\" : \"2000-01-23T04:56:07.000+00:00\",  \"nome\" : \"nome\",  \"id\" : 0,  \"iniciais\" : \"iniciais\",  \"sobrenome\" : \"sobrenome\",  \"dataNascimento\" : \"2000-01-23\",  \"status\" : true}", Cliente.class), HttpStatus.NOT_IMPLEMENTED);
-            } catch (IOException e) {
-                log.error("Couldn't serialize response for content type application/json", e);
-                return new ResponseEntity<Cliente>(HttpStatus.INTERNAL_SERVER_ERROR);
-            }
-        }
+			if (clienteUpdateStatus == null) {
+				throw new RuntimeException("Erro ao tentar alterar cliente");
+			} else {
+				responseEntity = new ResponseEntity<Cliente>(clienteUpdateStatus, getHeaderLocation(clienteUpdateStatus.getId()),  HttpStatus.ACCEPTED);
+			}
 
-        return new ResponseEntity<Cliente>(HttpStatus.NOT_IMPLEMENTED);
-    }
+		} catch (Exception e) {
+			log.error("Falha ao alterar status do cliente", e);
+			responseEntity = new ResponseEntity<Cliente>(HttpStatus.INTERNAL_SERVER_ERROR);
+		}
+		return responseEntity;
+	}
 
-    public ResponseEntity<Cliente> alterarCliente(@ApiParam(value = "Id do cliente.",required=true) @PathVariable("id") Integer id,@ApiParam(value = "" ,required=true )  @Valid @RequestBody Cliente cliente) {
-        String accept = request.getHeader("Accept");
-        if (accept != null && accept.contains("application/json")) {
-            try {
-                return new ResponseEntity<Cliente>(objectMapper.readValue("{  \"tipo\" : \"interno\",  \"dataAtualizacao\" : \"2000-01-23T04:56:07.000+00:00\",  \"nome\" : \"nome\",  \"id\" : 0,  \"iniciais\" : \"iniciais\",  \"sobrenome\" : \"sobrenome\",  \"dataNascimento\" : \"2000-01-23\",  \"status\" : true}", Cliente.class), HttpStatus.NOT_IMPLEMENTED);
-            } catch (IOException e) {
-                log.error("Couldn't serialize response for content type application/json", e);
-                return new ResponseEntity<Cliente>(HttpStatus.INTERNAL_SERVER_ERROR);
-            }
-        }
+	public ResponseEntity<Cliente> alterarCliente(@ApiParam(value = "Id do cliente.", required = true) @PathVariable("id") Integer id,@ApiParam(value = "", required = true) @Valid @RequestBody Cliente cliente) {
+		ResponseEntity<Cliente> responseEntity = null;
+		try {
+			cliente.setId(id);
+			Cliente clienteUpdate = clienteDAO.altera(cliente);
 
-        return new ResponseEntity<Cliente>(HttpStatus.NOT_IMPLEMENTED);
-    }
+			if (clienteUpdate == null) {
+				throw new RuntimeException("Erro ao alterar cliente");
+			}
+			responseEntity = new ResponseEntity<Cliente>(clienteUpdate, getHeaderLocation(clienteUpdate.getId()), HttpStatus.ACCEPTED);
 
-    public ResponseEntity<Cliente> cadastrarNovo(@ApiParam(value = "" ,required=true )  @Valid @RequestBody Cliente cliente) {
-        String accept = request.getHeader("Accept");
-        if (accept != null && accept.contains("application/json")) {
-            try {
-                return new ResponseEntity<Cliente>(objectMapper.readValue("{  \"tipo\" : \"interno\",  \"dataAtualizacao\" : \"2000-01-23T04:56:07.000+00:00\",  \"nome\" : \"nome\",  \"id\" : 0,  \"iniciais\" : \"iniciais\",  \"sobrenome\" : \"sobrenome\",  \"dataNascimento\" : \"2000-01-23\",  \"status\" : true}", Cliente.class), HttpStatus.NOT_IMPLEMENTED);
-            } catch (IOException e) {
-                log.error("Couldn't serialize response for content type application/json", e);
-                return new ResponseEntity<Cliente>(HttpStatus.INTERNAL_SERVER_ERROR);
-            }
-        }
+		} catch (Exception e) {
+			log.error("Falha ao tentar cadastrar cliente", e);
+			responseEntity = new ResponseEntity<Cliente>(HttpStatus.INTERNAL_SERVER_ERROR);
+		}
+		return responseEntity;
+	}
+	
+	private MultiValueMap<String, String> getHeaderLocation(Integer id){
+		URI location = ServletUriComponentsBuilder.fromCurrentRequest().buildAndExpand().toUri();
+		MultiValueMap<String, String> headers = new LinkedMultiValueMap<String, String>();
+		headers.add("location", location.getPath());
+		return headers;
+		
+	}
 
-        return new ResponseEntity<Cliente>(HttpStatus.NOT_IMPLEMENTED);
-    }
+	public ResponseEntity<Cliente> cadastrarNovo(@ApiParam(value = "", required = true) @Valid @RequestBody Cliente cliente) {
+		ResponseEntity<Cliente> responseEntity = null;
+		try {
 
-    public ResponseEntity<Cliente> consultarPorId(@ApiParam(value = "Id do cliente.",required=true) @PathVariable("id") Integer id) {
-        String accept = request.getHeader("Accept");
-        if (accept != null && accept.contains("application/json")) {
-            try {
-                return new ResponseEntity<Cliente>(objectMapper.readValue("{  \"tipo\" : \"interno\",  \"dataAtualizacao\" : \"2000-01-23T04:56:07.000+00:00\",  \"nome\" : \"nome\",  \"id\" : 0,  \"iniciais\" : \"iniciais\",  \"sobrenome\" : \"sobrenome\",  \"dataNascimento\" : \"2000-01-23\",  \"status\" : true}", Cliente.class), HttpStatus.NOT_IMPLEMENTED);
-            } catch (IOException e) {
-                log.error("Couldn't serialize response for content type application/json", e);
-                return new ResponseEntity<Cliente>(HttpStatus.INTERNAL_SERVER_ERROR);
-            }
-        }
+			if (cliente != null) {
+				Cliente clienteNovo = clienteDAO.salva(cliente);
+				if (clienteNovo == null) {
+					throw new RuntimeException("Erro ao tentar cadastrar novo cliente");
+				}
+				URI location = ServletUriComponentsBuilder.fromCurrentRequest().path("/{id}")
+						.buildAndExpand(clienteNovo.getId()).toUri();
 
-        return new ResponseEntity<Cliente>(HttpStatus.NOT_IMPLEMENTED);
-    }
+				MultiValueMap<String, String> headers = new LinkedMultiValueMap<String, String>();
+				headers.add("location", location.getPath());
 
-    public ResponseEntity<Cliente> consultarPorSobrenome(@ApiParam(value = "sobrenome do cliente.",required=true) @PathVariable("sobrenome") String sobrenome) {
-        String accept = request.getHeader("Accept");
-        if (accept != null && accept.contains("application/json")) {
-            try {
-                return new ResponseEntity<Cliente>(objectMapper.readValue("{  \"tipo\" : \"interno\",  \"dataAtualizacao\" : \"2000-01-23T04:56:07.000+00:00\",  \"nome\" : \"nome\",  \"id\" : 0,  \"iniciais\" : \"iniciais\",  \"sobrenome\" : \"sobrenome\",  \"dataNascimento\" : \"2000-01-23\",  \"status\" : true}", Cliente.class), HttpStatus.NOT_IMPLEMENTED);
-            } catch (IOException e) {
-                log.error("Couldn't serialize response for content type application/json", e);
-                return new ResponseEntity<Cliente>(HttpStatus.INTERNAL_SERVER_ERROR);
-            }
-        }
+				responseEntity = new ResponseEntity<Cliente>(clienteNovo, headers, HttpStatus.CREATED);
 
-        return new ResponseEntity<Cliente>(HttpStatus.NOT_IMPLEMENTED);
-    }
+			} else {
+				responseEntity = new ResponseEntity<Cliente>(HttpStatus.BAD_REQUEST);
+			}
 
-    public ResponseEntity<Void> excluir(@ApiParam(value = "Id do cliente.",required=true) @PathVariable("id") Integer id) {
-        String accept = request.getHeader("Accept");
-        return new ResponseEntity<Void>(HttpStatus.NOT_IMPLEMENTED);
-    }
+		} catch (Exception e) {
+			log.error("Falha ao tentar cadastrar cliente", e);
+			responseEntity = new ResponseEntity<Cliente>(HttpStatus.INTERNAL_SERVER_ERROR);
+		}
+		return responseEntity;
+
+	}
+
+	public ResponseEntity<Cliente> consultarPorId(@ApiParam(value = "Id do cliente.", required = true) @PathVariable("id") Integer id) {
+		ResponseEntity<Cliente> responseEntity = null;
+		try {
+
+			Cliente cliente = clienteDAO.consultaPorId(id);
+
+			if (cliente == null) {
+				responseEntity = new ResponseEntity<Cliente>(HttpStatus.NOT_FOUND);
+			} else {
+				responseEntity = new ResponseEntity<Cliente>(cliente, HttpStatus.OK);
+			}
+
+		} catch (Exception e) {
+			log.error("Falha ao tentar cadastrar cliente", e);
+			return new ResponseEntity<Cliente>(HttpStatus.INTERNAL_SERVER_ERROR);
+		}
+		return responseEntity;
+	}
+
+	public ResponseEntity<Clientes> consultarPorSobrenome(@ApiParam(value = "sobrenome do cliente.", required = true) @PathVariable("sobrenome") String sobrenome) {
+		ResponseEntity<Clientes> responseEntity = null;
+		try {
+
+			List<Cliente> listClientes = clienteDAO.consultaPorSobrenome(sobrenome);
+
+			if (listClientes == null ||(listClientes.size()<=0)) {
+				responseEntity = new ResponseEntity<Clientes>(HttpStatus.NOT_FOUND);
+			} else {
+				responseEntity = new ResponseEntity<Clientes>(objectMapper.readValue(objectMapper.writeValueAsString(listClientes), Clientes.class),HttpStatus.OK);
+			}
+
+		} catch (Exception e) {
+			log.error("Falha ao tentar cadastrar cliente", e);
+			return new ResponseEntity<Clientes>(HttpStatus.INTERNAL_SERVER_ERROR);
+		}
+		return responseEntity;
+	}
+
+	public ResponseEntity<Void> excluir(@ApiParam(value = "Id do cliente.", required = true) @PathVariable("id") Integer id) {
+		ResponseEntity<Void> responseEntity = null;
+		try {
+			boolean excluido = clienteDAO.exclui(id);
+
+			if (excluido) {
+				responseEntity = new ResponseEntity<Void>(HttpStatus.NO_CONTENT);
+			} else {
+				throw new RuntimeException("Erro ao tentar excluir cliente");
+			}
+
+		} catch (Exception e) {
+			log.error("Falha ao tentar excluir cliente", e);
+			responseEntity = new ResponseEntity<Void>(HttpStatus.INTERNAL_SERVER_ERROR);
+		}
+		return responseEntity;
+	}
 
 }
